# IW3SR

./: CMakeLists.txt  vcpkg.json
src/Game/: Application.cpp  Base.hpp  Plugin.hpp
src/Game/Definitions/: Declaration.cpp  Declaration.hpp  Events.hpp  Functions.hpp  Hooks.hpp  Structs.hpp
src/Game/Player/: Player.hpp
src/Game/Renderer/: Renderer.cpp
src/Game/Renderer/Drawing/: Draw3D.hpp
src/Game/Renderer/UI/: About.cpp  Modules.cpp
src/Game/System/: Dvar.cpp  Patch.cpp  Patch.hpp  System.cpp
src/Plugins/Graphics/: CMakeLists.txt  main.cpp
src/Plugins/Graphics/Modules/: Texts.cpp  Texts.hpp  Tweaks.hpp
src/Plugins/Player/: CMakeLists.txt  main.cpp
src/Plugins/Player/Modules/: CEF.cpp  CEF.hpp  CGAZ.hpp  FPS.hpp  KMOV.hpp  Lagometer.hpp  Movements.cpp  Movements.hpp  Velocity.hpp
src/Plugins/Player/Movements/: CS.hpp  Q3.hpp
