add_library(Graphics SHARED)
add_subdirectory(Modules)

# Build
target_link_libraries(Graphics PRIVATE IW3SR.API)
target_include_directories(Graphics PRIVATE ..)
target_sources(Graphics PRIVATE main.cpp Base.hpp)
target_precompile_headers(Graphics PRIVATE Base.hpp)

# Tree
set_target_properties(Graphics PROPERTIES FOLDER Plugins)
get_target_property(SOURCES Graphics SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})

# Install
install(TARGETS Graphics RUNTIME DESTINATION ${COD4}/iw3sr/Plugins)
